--- a/css/estilo.css
+++ b/css/estilo.css
@@ -100,6 +100,7 @@
         
                 .transparante {
                         background-color: rgba(0, 255, 255, 0);
+                        margin-top: 10px;
                 }
 
                 #transparante {
